# transfermarkt-dagster

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/dagster/: Dockerfile
docker/dagster/transfermarkt-pipeline/: pyproject.toml  setup.py
transfermarkt-pipeline/: README.md  setup.cfg
