[tool.poetry]
name = "transfermarkt-dagster"
version = "0.1.0"
description = "transfermarkt pipeline built using dagster"
authors = ["Dendi Handian <contact.dendi@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "transfermarkt_dagster"}]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.1.17"
dagit = "^1.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
